fix shift problem

--- a/bootstrap/css/area.css
+++ b/bootstrap/css/area.css
@@ -3,6 +3,6 @@
     height: 80%;
     width: 80%;
     min-width: 800px;
-    max-width: 1500px;
+    /* max-width: 1500px; */
     margin: 0 auto;
 }
